@@ -35,6 +35,7 @@ public class DecisionExecutionAuditContainer {
 
     protected String decisionKey;
     protected String decisionName;
+    protected int decisionVersion;
     protected String hitPolicy;
     protected String dmnDeploymentId;
     protected Date startTime;
@@ -52,12 +53,13 @@ public class DecisionExecutionAuditContainer {
     public DecisionExecutionAuditContainer() {
     }
 
-    public DecisionExecutionAuditContainer(String decisionKey, String decisionName, HitPolicy hitPolicy, 
+    public DecisionExecutionAuditContainer(String decisionKey, String decisionName, int decisionVersion, HitPolicy hitPolicy, 
                     Boolean strictMode, Map<String, Object> inputVariables) {
         
-        startTime = new Date();
+        this.startTime = new Date();
         this.decisionKey = decisionKey;
         this.decisionName = decisionName;
+        this.decisionVersion = decisionVersion;
         this.hitPolicy = hitPolicy.getValue();
         this.strictMode = strictMode;
 
@@ -141,6 +143,10 @@ public class DecisionExecutionAuditContainer {
 
     public String getDecisionName() {
         return decisionName;
+    }
+    
+    public int getDecisionVersion() {
+        return decisionVersion;
     }
 
     public String getHitPolicy() {
@@ -247,15 +253,15 @@ public class DecisionExecutionAuditContainer {
                 if (entry.getValue() == null) {
                     // do nothing
                 } else if (entry.getValue() instanceof Long) {
-                    newValue = new Long(((Long) entry.getValue()).longValue());
+                    newValue = Long.valueOf(((Long) entry.getValue()).longValue());
                 } else if (entry.getValue() instanceof Double) {
-                    newValue = new Double(((Double) entry.getValue()).doubleValue());
+                    newValue = Double.valueOf(((Double) entry.getValue()).doubleValue());
                 } else if (entry.getValue() instanceof Integer) {
-                    newValue = new Integer(((Integer) entry.getValue()).intValue());
+                    newValue = Integer.valueOf(((Integer) entry.getValue()).intValue());
                 } else if (entry.getValue() instanceof Date) {
                     newValue = new Date(((Date) entry.getValue()).getTime());
                 } else if (entry.getValue() instanceof Boolean) {
-                    newValue = new Boolean(((Boolean) entry.getValue()).booleanValue());
+                    newValue = Boolean.valueOf(((Boolean) entry.getValue()).booleanValue());
                 } else {
                     newValue = new String(entry.getValue().toString());
                 }
