@@ -349,7 +349,7 @@ public class ProcessInstanceQueryTest extends PluggableFlowableTestCase {
         assertEquals(PROCESS_DEPLOY_COUNT, instances.size());
         ProcessInstance processInstance = instances.get(0);
         assertEquals(deployment.getId(), processInstance.getDeploymentId());
-        assertEquals(new Integer(1), processInstance.getProcessDefinitionVersion());
+        assertEquals(Integer.valueOf(1), processInstance.getProcessDefinitionVersion());
         assertEquals(PROCESS_DEFINITION_KEY, processInstance.getProcessDefinitionKey());
         assertEquals("oneTaskProcessName", processInstance.getProcessDefinitionName());
         assertEquals(PROCESS_DEPLOY_COUNT, runtimeService.createProcessInstanceQuery().deploymentId(deployment.getId()).count());
@@ -363,7 +363,7 @@ public class ProcessInstanceQueryTest extends PluggableFlowableTestCase {
 
         ProcessInstance processInstance = instances.get(0);
         assertEquals(deployment.getId(), processInstance.getDeploymentId());
-        assertEquals(new Integer(1), processInstance.getProcessDefinitionVersion());
+        assertEquals(Integer.valueOf(1), processInstance.getProcessDefinitionVersion());
         assertEquals(PROCESS_DEFINITION_KEY, processInstance.getProcessDefinitionKey());
         assertEquals("oneTaskProcessName", processInstance.getProcessDefinitionName());
 
@@ -375,7 +375,7 @@ public class ProcessInstanceQueryTest extends PluggableFlowableTestCase {
         assertEquals(PROCESS_DEPLOY_COUNT, instances.size());
         ProcessInstance processInstance = instances.get(0);
         assertEquals(deployment.getId(), processInstance.getDeploymentId());
-        assertEquals(new Integer(1), processInstance.getProcessDefinitionVersion());
+        assertEquals(Integer.valueOf(1), processInstance.getProcessDefinitionVersion());
         assertEquals(PROCESS_DEFINITION_KEY, processInstance.getProcessDefinitionKey());
         assertEquals("oneTaskProcessName", processInstance.getProcessDefinitionName());
 
@@ -436,7 +436,7 @@ public class ProcessInstanceQueryTest extends PluggableFlowableTestCase {
 
         ProcessInstance processInstance = instances.get(0);
         assertEquals(deployment.getId(), processInstance.getDeploymentId());
-        assertEquals(new Integer(1), processInstance.getProcessDefinitionVersion());
+        assertEquals(Integer.valueOf(1), processInstance.getProcessDefinitionVersion());
         assertEquals(PROCESS_DEFINITION_KEY, processInstance.getProcessDefinitionKey());
         assertEquals("oneTaskProcessName", processInstance.getProcessDefinitionName());
 
